--- a/example/example.html
+++ b/example/example.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" title="particles" href="./style.css" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-	<script src="../jquery.particles.js"></script>
+	<script src="../src/jquery.particles.js"></script>
 	<script src="./example.js"></script>
 </head>
 
